# Melvix

./: .build.mk  .clang-format  .gdbinit  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  bochs.txt  bootstrap.sh  build.sh  config.mk  cross.sh  install.sh  kernel.conf  makefile  run  test.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  ccpp.yml  main.yml  release.yml
apps/: Makefile  README.md  a.c  b.c  browser.c  cc.c  chess.c  exec.c  files.c  generic.mk  idle.c  init.c  link.ld  mandelbrot.c  root.c  server.c  test.c  window.c  wm.c
apps/chess/: Makefile  chess.c  main.c
apps/idle/: Makefile
apps/init/: Makefile  init.c
apps/paint/: Makefile  main.c
apps/test/: Makefile  fuzz.c  main.c  test.c  test.h
apps/view/: Makefile  main.c
apps/wm/: Makefile  main.c  wm.c
boot/: Makefile  README.md  entry.asm  grub.cfg  load.c
boot/grub/: grub.cfg
docs/: INSTALL.md  MMAP.md
etc/: fstab  group  inittab  issue  mdev.conf  passwd  profile
kernel/: Makefile  README.md  entry.asm  link.ld  main.c  makefile  multiboot.c  test.c
kernel/drivers/: acpi.c  bga.c  cpu.c  fb.c  fpu.c  gdt.c  ide.c  int.asm  int.c  interrupts.asm  interrupts.c  keyboard.c  mbr.c  mouse.c  net.c  pci.c  pic.c  pit.c  rtc.c  rtl8139.c  serial.c  timer.c  vbe.c  vesa.c  vmware.c
kernel/drivers/ps2/: keyboard.c  mouse.c  ps2.c
kernel/features/: bus.c  dev.c  event.c  fb.c  fs.c  io.c  load.c  logger.c  memory.c  mm.c  net.c  proc.asm  proc.c  psf.c  syscall.c  timer.c
kernel/inc/: acpi.h  boot.h  bus.h  cpu.h  dev.h  event.h  fb.h  fpu.h  fs.h  gdt.h  gui.h  ide.h  interrupts.h  io.h  kernel.h  keyboard.h  load.h  logger.h  memory.h  mm.h  mouse.h  multiboot.h  net.h  pci.h  proc.h  protocols.h  ps2.h  rtc.h  rtl8139.h  serial.h  syscall.h  test.h  timer.h  vmware.h
kernel/inc/acpi/: main.h
kernel/inc/boot/: abstract.h  multiboot.h
kernel/inc/core/: control.h  features.h  float.h  io.h  protection.h  registers.h  spinlock.h
kernel/inc/dev/: management.h  sys.h
kernel/inc/drivers/: acpi.h  bga.h  cpu.h  disk.h  gdt.h  ide.h  install.h  int.h  interrupt.h  interrupts.h  keyboard.h  logger.h  mbr.h  mouse.h  network.h  pci.h  pic.h  pit.h  ps2.h  serial.h  timer.h  vbe.h  vga.h  video.h
kernel/inc/events/: interrupt.h  keyboard.h  mouse.h
kernel/inc/fs/: device.h  ext2.h  sys.h  virtual.h
kernel/inc/memory/: range.h
kernel/inc/parts/: gpt.h  mbr.h
kernel/inc/ports/: 8042.h  8250.h  8253.h  8259.h  ata.h
kernel/inc/protocols/: multiboot1.h
kernel/inc/tasking/: call.h  task.h
kernel/src/: entry.asm  main.c
kernel/src/acpi/: parse.c
kernel/src/boot/: abstract.c  multiboot.c
kernel/src/core/: MOVE_serial.old  control.c  features.c  float.c  io.c  protection.c
kernel/src/dev/: management.c  sys.c
kernel/src/drivers/: install.c  logger.c  vga.c
kernel/src/events/: interrupt.c  keyboard.c  mouse.c
kernel/src/fs/: device.c  ext2.c  sys.c  virtual.c
kernel/src/memory/: range.c
kernel/src/parts/: gpt.c  mbr.c
kernel/src/ports/: 8042.c  8250.c  8253.c  8259.c  ata.c
kernel/src/protocols/: parse.c
kernel/src/tasking/: call.c  task.c
lib/: Makefile  cpu.c  mem.c  print.c  str.c  sys.c
lib/inc/: cpu.h  list.h  mem.h  print.h  str.h  sys.h
libc/: Makefile  alloc.c  conv.c  cpu.c  errno.c  list.c  math.c  mem.c  print.c  random.c  sanitize.c  serial.c  stack.c  str.c  sys.c
libc/crt/: crt0.asm  crti.asm  crtn.asm
libc/inc/: assert.h  conv.h  cpu.h  crypto.h  def.h  errno.h  input.h  ioctl.h  list.h  math.h  mem.h  print.h  random.h  serial.h  socket.h  stack.h  str.h  sys.h  vec.h
libgui/: Makefile  bmp.c  gfx.c  gui.c  msg.c  png.c  psf.c  vesa.c
libgui/inc/: bmp.h  gfx.h  gui.h  msg.h  png.h  vesa.h
libnet/: Makefile  dns.c  http.c  ip.c
libnet/inc/: dns.h  http.h  net.h
libs/: README.md  generic.mk  makefile
libs/libc/: Makefile  alloc.c  conv.c  cpu.c  crypto.c  errno.c  list.c  math.c  mem.c  print.c  rand.c  random.c  sanitize.c  stack.c  str.c  sys.c
libs/libc/crt/: crt0.c
libs/libc/inc/: arg.h  assert.h  conv.h  cpu.h  crypto.h  ctype.h  def.h  err.h  errno.h  format.h  list.h  math.h  mem.h  poll.h  print.h  rand.h  random.h  stack.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  str.h  string.h  sys.h  unistd.h  utf8.h  (+1 more)
libs/libgui/: Makefile  bmp.c  bmp.h  gfx.c  gfx.h  gui.c  gui.h  msg.c  msg.h  png.c  psf.c  psf.h  vesa.h  widgets.c  widgets.h
libs/libnet/: Makefile  dns.c  http.c  http.h  ip.c  ip.h  net.h
libs/libtxt/: Makefile  html.c  html.h  keymap.c  keymap.h  xml.c  xml.h
libtxt/: Makefile  html.c  keymap.c  xml.c
libtxt/inc/: html.h
res/: index.html  test.c
res/keymaps/: en.keymap
res/www/: 404.html  index.html
src/: Makefile  boot.asm  boot.s  config.h  entry.asm  grub.cfg  kernel.c  link.ld  linker.ld  main.c  test.c
src/assets/: font.c
src/bootloader/: cd.asm  grub.cfg  hdd1.asm  hdd2.asm  loader.asm  make_initrd.c  stage1.asm  stage2.asm
src/commands/: command.c  command.h
src/drivers/: cpu.c  ide.c  interrupts.asm  interrupts.c  keyboard.c  serial.c  timer.c  vesa.c
src/features/: elf.c  fs.c  gui.c  load.c  proc.asm  proc.c  psf.c  syscall.c
src/gdt/: gdt.asm  gdt.h
src/graphics/: graphics.h  vga.c  vga.h
src/idt/: idt.c  idt.h
src/inc/: boot.h  cpu.h  elf.h  fs.h  gui.h  interrupts.h  keyboard.h  load.h  proc.h  psf.h  serial.h  syscall.h  timer.h  vesa.h
src/input/: input.h
src/interrupts/: idt.asm  idt.c  interrupts.h  irq.c  isr.asm  isr.c
src/io/: io.asm  io.c  io.h
src/kernel/: boot.asm  grub.cfg  interact.asm  kernel.c  linker.ld  multiboot.c  multiboot.h  mutliboot.h  syscall.c  syscall.h  system.c  system.h
src/lib/: conv.c  def.h  lib.h  math.c  memory.c  print.c  str.c  string.c
src/memory/: memory.c  memory.h
src/mlibc/: stdio.h  stdlib.h
src/resources/: conv.sh  font.c
src/shared/: common.h  stdarg.h  stdbool.h  stddef.h  stdint.h
src/sound/: frequency.c  sound.h
src/timer/: timer.h
src/userspace/: linker.ld  main.asm  main.c  start.asm  syscall.c  syscall.h
src/utils/: make_initrd.c
(+363 files in other folders)
